# cvars

./: .gitignore  404.html  LICENSE  README.md  alien-swarm.json  asset-manifest.json  black-mesa.json  counter-strike-source.json  deploy  dota-2.json  global-offensive.json  half-life-2.json  half-life-source.json  index.html  infra.json  left-4-dead-2.json  package-lock.json  package.json  portal-2-community-edition.json  portal-2-sixense.json  portal-2.json  portal-revolution.json  portal.json  precache-manifest.0107ac69d83160188bae8d7535d8c7a9.js  precache-manifest.01f1603cd50fd48c06cf6be879cbbf1b.js  precache-manifest.0e57c5be9110d6badfdf68966b83f25a.js  precache-manifest.17acbed4eda2346ac2c7462edb2917d1.js  precache-manifest.197c9e4a8f23ecb26184d0fab331b956.js  precache-manifest.3fae4e1ea0e775595ed57711173d9f0a.js  precache-manifest.663e9444937ca1b11a74e6768c3a401a.js  precache-manifest.7b752a800eeb6bcfa4e7167be548055a.js  precache-manifest.84b5769a01edfdd1c61af8df437a3c54.js  precache-manifest.8e8bfd4d426c68351026b441ee8f1eab.js  precache-manifest.95309d3b3e7f2ab32c1c916e5e51bfb0.js  precache-manifest.b5a075a4e38a70df8a2369d055f0a880.js  precache-manifest.c04a6bbb48c7c1867f0cb19fb966d8dc.js  precache-manifest.f98816277e9652d659d233d7c0c754b1.js  prettier.config.js  service-worker.js  team-fortress-2.json  (+3 more)
backend/: build  cvars.cs  cvars.csproj
module/: .gitignore  Cargo.toml  LICENSE  build.bat  build_x64.bat  makefile
module/src/: lib.rs  macros.rs  main.rs  mem.rs  modules.rs  offsets.rs  sdk.rs
public/: CNAME  index.html
scripts/: Cargo.toml
(+90 files in other folders)
