[package]
name = "cvars"
version = "1.0.0"
authors = ["NeKz <nekzor@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
bench = false

[features]
default = ["portal2"]
hl2 = []
portal2 = []
portal2_ce = []
dota2 = []
vr = []

[dependencies]
libc = "0.2"

[target.'cfg(unix)'.dependencies]
ctor = "0.1.14"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["libloaderapi"] }
